--- a/OneDrive/Desktop/complete git/contact.html
+++ b/OneDrive/Desktop/complete git/contact.html
@@ -1,7 +1,13 @@
+<!--this file has been fixed by harry on branch feature1-->
 <html>
-    <html>
-          <html>
-
-          </html>
-    </html>
+    slfsgkdsgshlfds
+    dsgsd
+    cxbx
+    sdgkdf
+    sdgsd
+    slfsgkdsgshlfdsd
+    gsdgdlhs
+    sdlhjs;;slfsgkdsgshlfdsffsfs
+    dfgsg
+    sdggdsg
 </html>
